# Install-OpenCV

./: Makefile  README.md  dependency-ubuntu16.04.bash.sh  dependency-ubuntu18.04.bash.sh  install-opencv.bash.sh
byCMake/: CMakeLists.txt  README.md
byCMake/cmake-modules/: FindOpenCV.cmake
